# flask-blog

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  seed_demo.py
app/: __init__.py  config.py  models.py  security.py
app/posts/: __init__.py  routes.py
app/static/css/: style.css
app/templates/: about.html  add_article.html  base.html  index.html  post_detail.html  post_edit.html  posts.html
tests/: test_posts.py
